--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://www.etienne.ninja/
+baseURL: https://main.d180cq1p10na41.amplifyapp.com/
 
 languageCode: fr-ca
 title: Blogue d'Étienne
