--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ languageCode: fr-ca
 title: Blogue d'Étienne
 theme: vanilla-bootstrap-hugo-theme
 #googleAnalytics: UA-123456789-1
-#relativeURLs: false
+relativeURLs: true
 #canonifyURLs: false
 enableEmoji: true
 taxonomies:
