change canonyfy URL

--- a/config.yaml
+++ b/config.yaml
@@ -4,8 +4,8 @@ languageCode: fr-ca
 title: Blogue d'Étienne
 theme: vanilla-bootstrap-hugo-theme
 #googleAnalytics: UA-123456789-1
-relativeURLs: true
-#canonifyURLs: false
+#relativeURLs: true
+canonifyURLs: true
 enableEmoji: true
 taxonomies:
   tag: tags
